Frontend Types error fixed